Added DateTime to ReviewsTable, custom style there too

--- a/BoxOfCourses/BoxOfCourses/Content/Site.css
+++ b/BoxOfCourses/BoxOfCourses/Content/Site.css
@@ -185,6 +185,9 @@ input[type="search"] {
 }*/
 
 
+/*style showed entries below table */
+
+
 @font-face {
     font-family: 'Open Sans';
     font-style: normal;
