--- a/BoxOfCourses/BoxOfCourses/Views/Home/SendEmail.cshtml
+++ b/BoxOfCourses/BoxOfCourses/Views/Home/SendEmail.cshtml
@@ -112,7 +112,6 @@
                             </div>
                         </figcaption>
                     </figure>
-
                 </div>
             </div>
         </div>
@@ -187,7 +186,7 @@
 
 <style>
     .custom-send-button {
-        color: #5ABD64;
+        color: #5ABD64!important;
         background-color: #303641;
         width: 100px;
         border-radius: 0;
@@ -196,7 +195,7 @@
     .custom-send-button:hover {
         background-color: #303a41;
         border: 2px solid #5ABD64;
-        color: #5ABD64;
+        color: #5ABD64!important;
      }
         
     .email-form {
