--- a/BoxOfCourses/BoxOfCourses/Views/ReviewModels/Create.cshtml
+++ b/BoxOfCourses/BoxOfCourses/Views/ReviewModels/Create.cshtml
@@ -65,6 +65,14 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="form-group hide">
+                        <div class="col-md-offset-2 col-md-10 ">
+                            @Html.EditorFor(model => model.CurrentDate, new { htmlAttributes = new { @class = "form-control getDate date-value" } })
+
+                            @Html.ValidationMessageFor(model => model.CurrentDate, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-md-5">
@@ -111,8 +119,37 @@
                 $("#" + i).removeClass("StarsColoredOver");
             }
         }
+        @* ends here - script for star rating system *@
 
-    @* ends here - script for star rating system *@
+        $(window).on("load", function () {
+
+            var currDate = new Date();
+            var year = currDate.getFullYear();
+
+            var month = (1 + currDate.getMonth()).toString();
+            month = month.length > 1 ? month : '0' + month;
+
+            var day = currDate.getDate().toString();
+            day = day.length > 1 ? day : '0' + day;
+
+            var mins = currDate.getMinutes().toString();
+           @* mins = mins.length <= 9 ? '0' + mins : mins;*@
+            if (mins <= 9) {
+                mins = '0' + mins;
+            }
+         
+           @* var hour = currDate.getHours();
+            if (hour == "0") {
+                hour = "00";
+            }*@
+
+            formatedDate = month + '.' + day + '.' + year + " " + currDate.getHours() + ":" + mins;
+            
+
+            console.log(formatedDate)
+            $(".getDate").val(formatedDate);
+        })
+
     </script>
 }
 
