--- a/BoxOfCourses/BoxOfCourses/Views/ReviewModels/Index.cshtml
+++ b/BoxOfCourses/BoxOfCourses/Views/ReviewModels/Index.cshtml
@@ -14,7 +14,10 @@
             <thead>
                 <tr>
                     <th>
-                        User
+                        CREATED
+                    </th>
+                    <th>
+                        AUTHOR
                     </th>
                     <th>
                         @Html.DisplayNameFor(model => model.Category)
@@ -22,7 +25,7 @@
                     <th>
                         @Html.DisplayNameFor(model => model.Comment)
                     </th>
-                    <th>
+                    <th class="th-user-review">
                         User's review
                     </th>
                     <th></th>
@@ -32,6 +35,9 @@
                 @foreach (var item in Model)
                 {
                     <tr>
+                        <td>
+                             @Html.DisplayFor(modelItem => item.CurrentDate)
+                        </td>
                         <td class="username-td" user-data="@item.UserName")>
                             @{
                                 string[] temp = (item.UserName).Split('@');
@@ -56,7 +62,7 @@
                             @if (User.Identity.Name == item.UserName || User.Identity.Name == "administrator@gmail.com")
                             {
                                 @*@Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger" })*@
-                            <button data-course-id="@item.Id" class="btn btn-danger js-delete">Delete</button>
+                            <button data-course-id="@item.Id" class="btn btn-danger js-delete"><i style="padding-top: 2px;" class="glyphicon glyphicon-trash"></i> Delete</button>
                             }
                         </td>
                     </tr>
@@ -80,18 +86,16 @@
     }
     th {
         color: #5ABD64;
-        text-align: center;
         text-transform: uppercase;
-        font-size: 13px;
+        font-size: 11px;
         letter-spacing: 2px;
     }
     .stars-column{
-        text-align: center;
+        padding-left: 80px!important;
     }
-    @*td{
-        vertical-align: middle;
-        text-align: center;
-    }*@
+    td{
+        vertical-align: middle!important;
+    }
     .username-td {
         color: lightblue;
         font-size: 15px;
@@ -100,32 +104,47 @@
         color: grey;
         font-size: 15px;
         font-weight: 700;
-        width: 100px;
+        width: 120px;
     }
     #ReviewsTable_filter label {
         color: #C126EA;
         font-size: 17px;
     }
     .comment-section-table{
-        max-width: 150px;
+        max-width: 180px;
         text-align: justify;
     }
 
+    .th-user-review{
+        text-align: center;
+    }
+
     tr:hover {
-        background-color: #303641!important;
+        background-color: #303641 !important;
     }
 
     tr:nth-child(even) {
         background-color: #171c26;
     }
- 
+
+    .js-delete {
+        background-color: #922121;
+        font-weight: 600;
+    }
+
+    @*style entries info*@ 
+    #ReviewsTable_info {
+        color: grey;
+    }
 </style>
 
 @section scripts{
     <script>
 
         $(document).ready(function () {
-            var table = $(".table-reviews").DataTable();
+            var table = $(".table-reviews").DataTable({
+                "order": [[0, "desc"]]
+            });
 
             tempTable = table;
         })
