--- a/BoxOfCourses/BoxOfCourses/Views/Home/SendEmail.cshtml
+++ b/BoxOfCourses/BoxOfCourses/Views/Home/SendEmail.cshtml
@@ -14,7 +14,7 @@
 <body>
     <div class="email-form container">
         <h1 class="contact-heading-h1">Let's <span class="contact-heading-span">get in touch</span>! 👋</h1>
-        <p class="contact-us-text">You have an idea, any question, or maybe you want to report problem? <span style="color: #5ABD64;" class="contact-me-label-heading">Contact me</span>.  <ion-icon style="color: orange; width: 25px; height: 28px;" name="flash"></ion-icon> </p>
+        <p class="contact-us-text">You have an idea, any question, or maybe you want to report problem? <span style="color: #5ABD64;" class="contact-me-label-heading">Contact me</span>. 🚀</p>
         <div class="row">
             <div class="col-md-6">
                 <div class="form-horizontal email-contanct-form">
